# marvel_v_0_1

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  POTLOG.txt  README.md  README.md.orig  mainpage.dox  manifest.xml  manifest.xml~
include/: flight_plan.h  flight_plan.h~  guidance_pack.h  guidance_pack.h~  pid.h  radio.h
msg/: Autopilot.msg  Guidance_Command.msg  OpticalFlow.msg  OpticalFlow.msg~  QRms.msg  obstacle_avoidance.msg  window_detector.msg
src/: guidance_pack.cpp  guidance_pack.cpp.autosave  listener .cpp  obstacle_avoidance.cpp  obstacle_avoidance.cpp.autosave  obstacle_data.cpp  optical_flow orginial.cpp  optical_flow.cpp  pid.cpp  qr_cod.cpp  qr_code.cpp  radio.cpp  server.cpp  window_detector.cpp  window_detector.cpp.autosave  xtion_fpv.cpp
src/marvel_v_0_1/msg/: _Autopilot.py  _Guidance_Command.py  _OpticalFlow.py  _QRms.py  __init__.py  _window_detector.py
src/marvel_v_0_1/srv/: __init__.py  _qr_kill.py
srv/: run.srv
srv_gen/cpp/include/marvel_v_0_1/: qr_kill.h  window_kill.h
srv_gen/lisp/: _package.lisp  _package_window_kill.lisp  marvel_v_0_1-srv.asd  qr_kill.lisp  window_kill.lisp
